# ITAK

ITAK/: Algorithm.cpp  Algorithm.h  Analyzer.cpp  Analyzer.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Container.h  DenialOfServiceAnalyzer.cpp  DenialOfServiceAnalyzer.h  Dictionary.h  KeyValue.h  PortScanAnalyzer.cpp  PortScanAnalyzer.h  ResultSet.cpp  ResultSet.h  Utils.cpp  Utils.h
ITAK/Testing/: TestAnalyzer.cpp  TestAnalyzer.h  TestingAlgorithm.cpp  TestingAlgorithm.h  TestingConfiguration.cpp  TestingConfiguration.h  TestingDenialOfService.cpp  TestingDenialOfService.h  TestingDictionary.cpp  TestingDictionary.h  TestingPortScan.cpp  TestingPortScan.h  TestingResultSet.cpp  TestingResultSet.h  testMain.cpp
ITAK/Testing/Data/: sample1.txt
